logs/stampy.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/lxml'...
Listing './lib/python3.5/site-packages/lxml/html'...
Listing './lib/python3.5/site-packages/lxml/includes'...
Listing './lib/python3.5/site-packages/lxml/includes/libexslt'...
Listing './lib/python3.5/site-packages/lxml/includes/libxml'...
Listing './lib/python3.5/site-packages/lxml/includes/libxslt'...
Listing './lib/python3.5/site-packages/lxml/isoschematron'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/rng'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl/iso-schematron-xslt1'...
Listing './lib/python3.5/site-packages/lxml-4.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/stampy'...
Listing './lib/python3.5/site-packages/stampy/reader'...
Compiling './lib/python3.5/site-packages/stampy/reader/blockGamut.py'...
***   File "./lib/python3.5/site-packages/stampy/reader/blockGamut.py", line 87
    print "dedent: dedent(..., tabsize=%d, skip_first_line=%r)"\
                                                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/stampy/reader/hashHtml.py'...
***   File "./lib/python3.5/site-packages/stampy/reader/hashHtml.py", line 228
    except ValueError, ex:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/stampy/reader/mdParser.py'...
***   File "./lib/python3.5/site-packages/stampy/reader/mdParser.py", line 671
    print "dedent: dedent(..., tabsize=%d, skip_first_line=%r)"\
                                                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/stampy/writer'...
Compiling './lib/python3.5/site-packages/stampy/writer/hashhtml.py'...
***   File "./lib/python3.5/site-packages/stampy/writer/hashhtml.py", line 175
    except ValueError, ex:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/stampy-0.2.0.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
